--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <HTML>
 <HEAD></HEAD>
-<BODY><P><B><FONT FACE="TAHOMA" SIZE="14">
-Ηροδότου 10 Κολωνάκι: Ενοικιάζεται ανακαινισμένο διαμέρισμα 72τμ, 3ου ορόφου, πρόσοψης, διαμπερές με δύο υπνοδωμάτια, χωλ, σαλόνι, μαρμάρινο μπάνιο, κουζίνα, δρύινα πατώματα ψαροκόκκαλο, κλιματισμός, συναγερμός, ενεργειακά κουφώματα αλουμινίου με διπλό τζάμι. Ιδανικό για κατοικία ή επαγγελματική στέγη. Τιμή 1300€/μήνα. Πληροφορίες 6932585741</FONT></B></P>
-<IMG SRC="ha1.jpg"></BR>
-<IMG SRC="ha2.jpg"></BR>
-<IMG SRC="ha3.jpg"></BR>
-<IMG SRC="ha4.jpg"></BR>
-<IMG SRC="ha5.jpg"></BR>
-<IMG SRC="ma1.jpg"></BR>
-<IMG SRC="ma2.jpg"></BR>
-<IMG SRC="ma3.jpg"></BR>
-<IMG SRC="off1.jpg"></BR>
-<IMG SRC="off2.jpg"></BR>
-<IMG SRC="off3.jpg"></BR>
-<IMG SRC="off4.jpg"></BR>
-<IMG SRC="off5.jpg"></BR>
-<IMG SRC="off6.jpg"></BR>
-<IMG SRC="be1.jpg"></BR>
-<IMG SRC="be2.jpg"></BR>
-<IMG SRC="be3.jpg"></BR>
-<IMG SRC="be4.jpg"></BR>
-<IMG SRC="be5.jpg"></BR>
-<IMG SRC="be6.jpg"></BR>
-<IMG SRC="be7.jpg"></BR>
-<IMG SRC="be8.jpg"></BR>
-<IMG SRC="ba1.jpg"></BR>
-<IMG SRC="ba2.jpg"></BR>
-<IMG SRC="ba3.jpg"></BR>
-<IMG SRC="ba4.jpg"></BR>
-<IMG SRC="k1.jpg"></BR>
-<IMG SRC="k2.jpg"></BR>
-<IMG SRC="k3.jpg"></BR>
-<IMG SRC="k4.jpg"></BR>
-<IMG SRC="k5.jpg"></BR>
-<IMG SRC="k6.jpg"></BR>
-<IMG SRC="out1.jpg"></BR>
-<IMG SRC="out2.jpg"></BR>
-<IMG SRC="out3.jpg"></BR>
-<IMG SRC="out4.jpg"></BR>
+<BODY><P><B><FONT FACE="TAHOMA" SIZE="12">
+Ηροδότου 10 Κολωνάκι: <BR>
+Ενοικιάζεται ανακαινισμένο διαμέρισμα 72τμ, 3ου ορόφου, πρόσοψης, διαμπερές με δύο υπνοδωμάτια, χωλ, σαλόνι, μαρμάρινο μπάνιο, κουζίνα, δρύινα πατώματα ψαροκόκκαλο, κλιματισμός, συναγερμός, ενεργειακά κουφώματα αλουμινίου με διπλό τζάμι. 
+<BR>
+Ιδανικό για κατοικία ή επαγγελματική στέγη. Τιμή 1300€/μήνα. <BR>Πληροφορίες 6932585741</FONT></B></P>
+<IMG SRC="ha1.jpg" width=500>
+<IMG SRC="ha2.jpg" width=500></BR>
+<IMG SRC="ha3.jpg"width=500>
+<IMG SRC="ha4.jpg"width=500></BR>
+<IMG SRC="ha5.jpg"width=500>
+<IMG SRC="ma1.jpg"width=500></BR>
+<IMG SRC="ma2.jpg"width=500>
+<IMG SRC="ma3.jpg"width=500></BR>
+<IMG SRC="off1.jpg"width=500>
+<IMG SRC="off2.jpg"width=500></BR>
+<IMG SRC="off3.jpg"width=500>
+<IMG SRC="off4.jpg"width=500></BR>
+<IMG SRC="off5.jpg"width=500>
+<IMG SRC="off6.jpg"width=500></BR>
+<IMG SRC="be1.jpg"width=500>
+<IMG SRC="be2.jpg"width=500></BR>
+<IMG SRC="be3.jpg"width=500>
+<IMG SRC="be4.jpg"width=500></BR>
+<IMG SRC="be5.jpg"width=500>
+<IMG SRC="be6.jpg"width=500></BR>
+<IMG SRC="be7.jpg"width=500>
+<IMG SRC="be8.jpg"width=500></BR>
+<IMG SRC="ba1.jpg"width=500>
+<IMG SRC="ba2.jpg"width=500></BR>
+<IMG SRC="ba3.jpg"width=500>
+<IMG SRC="ba4.jpg"width=500></BR>
+<IMG SRC="k1.jpg"width=500>
+<IMG SRC="k2.jpg"width=500></BR>
+<IMG SRC="k3.jpg"width=500>
+<IMG SRC="k4.jpg"width=500></BR>
+<IMG SRC="k5.jpg"width=500>
+<IMG SRC="k6.jpg"width=500></BR>
+<IMG SRC="out1.jpg"width=500>
+<IMG SRC="out2.jpg"width=500></BR>
+<IMG SRC="out3.jpg"width=500>
+<IMG SRC="out4.jpg"width=500></BR>
 
 
 </BODY>
