--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD></HEAD>
 <BODY><P><B><FONT FACE="TAHOMA" SIZE="12">
 Ηροδότου 10 Κολωνάκι: <BR>
-Ενοικιάζεται ανακαινισμένο διαμέρισμα 72τμ, 3ου ορόφου, πρόσοψης, διαμπερές με δύο υπνοδωμάτια, χωλ, σαλόνι, μαρμάρινο μπάνιο, κουζίνα, δρύινα πατώματα ψαροκόκκαλο, κλιματισμός, συναγερμός, ενεργειακά κουφώματα αλουμινίου με διπλό τζάμι. 
+Ενοικιάζεται ανακαινισμένο διαμέρισμα 72τμ, 3ου ορόφου, πρόσοψης, διαμπερές, με δύο υπνοδωμάτια, χωλ, σαλόνι, μαρμάρινο μπάνιο, κουζίνα, δρύινα πατώματα ψαροκόκκαλο, κλιματισμός, συναγερμός, δομημένη καλωδίωση, καλωδίωση για κάμερες, ενεργειακά κουφώματα αλουμινίου με διπλό τζάμι, ηλιακός θερμοσίφωνας.
 <BR>
 Ιδανικό για κατοικία ή επαγγελματική στέγη. Τιμή 1300€/μήνα. <BR>Πληροφορίες 6932585741</FONT></B></P>
 <IMG SRC="ha1.jpg" width=500>
